test/fail/transform/redefForFor/test.twge
block init {
    actions {
        for(x in -2...2) {
            for(x in -2...2) {
                addActor(x = x);
            }
        }
    }
}